Fixed: top title align issue

--- a/assets/scss/integrations/btl-fbs.scss
+++ b/assets/scss/integrations/btl-fbs.scss
@@ -23,6 +23,7 @@
 		.btl-fbs-top-bar {
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
 			margin-bottom: 20px;
 
 			span.close-button {
